feat: Sanitize environment-specific configurations for public distribution
🔧 Configuration Sanitization:
- Remove hardcoded marsem.org domain references
- Replace rmqk8 registry with generic your-registry placeholder
- Remove environment-specific IP addresses and DNS configurations
- Update all CORS origins to use generic hostnames
- Remove k8s-v2 directory with duplicate environment-specific configs

📋 New Configuration Management:
- CONFIGURATION_TEMPLATE.md - Complete setup guide for users
- setup-config.sh - Interactive configuration script
- Enhanced validation in deployment scripts
- Environment file generation (.env)
- Backup and restore functionality

🔒 Security Improvements:
- Validate required configuration before deployment
- Clear warnings about changing default credentials
- Prevent deployment with placeholder values
- Reference configuration template in error messages

📚 Documentation Updates:
- Updated all guides to use generic examples
- Added configuration requirements to README
- Removed environment-specific URLs and examples
- Added setup instructions for different registry types

Files Sanitized:
- k8s/configmap.yaml - CORS origins and hostname
- k8s/ingress.yaml - TLS and hostname configuration
- k8s/nginx-config.yaml - Server name configuration
- backend/src/main/resources/application.yml - CORS and WebSocket origins
- backend/src/main/java/org/marsem/kafka/controller/HealthController.java - CORS annotation
- All deployment scripts - Default registry values
- All documentation - Generic examples and hostnames

The codebase is now ready for public distribution with no environment-specific configurations.

--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -66,7 +66,7 @@ data:
     # Application specific configuration
     app:
       cors:
-        allowed-origins: https://kafkawebtool.marsem.org,http://localhost:3000
+        allowed-origins: https://your-hostname.com,http://localhost:3000
         allowed-methods: GET,POST,PUT,DELETE,OPTIONS
         allowed-headers: "*"
         allow-credentials: true
