--- a/k8s/nginx-config.yaml
+++ b/k8s/nginx-config.yaml
@@ -14,7 +14,7 @@ data:
     
     server {
         listen 80;
-        server_name kafkawebtool.marsem.org;
+        server_name your-hostname.com;
         
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
