feat: Implement robust template-based configuration system
🔧 Template System Implementation:
- Replace fragile sed replacements with proper template variables
- Use {{VARIABLE}} syntax for clear variable identification
- Centralized template replacement function in deployment scripts
- Consistent variable handling across all Kubernetes manifests

📋 Template Variables Added:
- {{NAMESPACE}} - Kubernetes namespace
- {{HOSTNAME}} - Application hostname
- {{REGISTRY}} - Docker registry
- {{BACKEND_IMAGE}} - Backend image name
- {{FRONTEND_IMAGE}} - Frontend image name
- {{IMAGE_TAG}} - Docker image tag

🛠️ Files Converted to Templates:
- k8s/configmap.yaml - Namespace, hostname, CORS origins
- k8s/ingress.yaml - Namespace, hostname, TLS configuration
- k8s/deployment.yaml - Namespace, registry, image names and tags
- k8s/secret.yaml - Namespace
- k8s/postgres.yaml - Namespace
- k8s/redis.yaml - Namespace

🚀 Deployment Script Improvements:
- replace_template_vars() function for consistent replacements
- Proper variable substitution in quick-deploy.sh
- Enhanced template handling in build-deploy.sh
- Support for custom image tags in build deployments

✅ Testing Results:
- Successfully deployed to kafka-test namespace
- All 8 pods running (3 backend, 3 frontend, 1 postgres, 1 redis)
- Application accessible at https://kafkatooltest.marsem.org
- Template variables correctly replaced with user values
- No more sed replacement errors or missed substitutions

Benefits:
- Eliminates fragile sed pattern matching
- Clear variable identification in templates
- Consistent configuration across all manifests
- Easy to extend with new variables
- Robust error handling and validation

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kafka-web-app-backend
-  namespace: kafka-tool
+  namespace: {{NAMESPACE}}
   labels:
     app: kafka-web-app-v2
     component: backend
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: rmqk8/kafka-web-app-v2:latest
+        image: {{REGISTRY}}/{{BACKEND_IMAGE}}:{{IMAGE_TAG}}
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -108,7 +108,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kafka-web-app-backend
-  namespace: kafka-tool
+  namespace: {{NAMESPACE}}
   labels:
     app: kafka-web-app-v2
     component: backend
@@ -128,7 +128,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kafka-web-app-frontend
-  namespace: kafka-tool
+  namespace: {{NAMESPACE}}
   labels:
     app: kafka-web-app-v2
     component: frontend
@@ -153,7 +153,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: rmqk8/kafka-web-app-frontend:latest
+        image: {{REGISTRY}}/{{FRONTEND_IMAGE}}:{{IMAGE_TAG}}
         imagePullPolicy: Always
         ports:
         - containerPort: 3000
@@ -187,7 +187,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kafka-web-app-frontend
-  namespace: kafka-tool
+  namespace: {{NAMESPACE}}
   labels:
     app: kafka-web-app-v2
     component: frontend
