--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: kafka-web-app-secrets
-  namespace: kafka-tool
+  namespace: {{NAMESPACE}}
   labels:
     app: kafka-web-app-v2
     component: secrets
