--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: kafka-web-app-config
-  namespace: kafka-tool
+  namespace: {{NAMESPACE}}
   labels:
     app: kafka-web-app-v2
     component: config
@@ -32,7 +32,7 @@ data:
       
       jpa:
         hibernate:
-          ddl-auto: validate
+          ddl-auto: update
         show-sql: false
         properties:
           hibernate:
@@ -66,7 +66,7 @@ data:
     # Application specific configuration
     app:
       cors:
-        allowed-origins: https://your-hostname.com,http://localhost:3000
+        allowed-origins: https://{{HOSTNAME}},http://localhost:3000
         allowed-methods: GET,POST,PUT,DELETE,OPTIONS
         allowed-headers: "*"
         allow-credentials: true
