--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -6,7 +6,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres
-  namespace: kafka-tool
+  namespace: {{NAMESPACE}}
   labels:
     app: postgres
     component: database
@@ -80,7 +80,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
-  namespace: kafka-tool
+  namespace: {{NAMESPACE}}
   labels:
     app: postgres
     component: database
